--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
+.nanum {
+    font-family: "Nanum Myeongjo", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.poppinsThin {
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+}
 .bg-img {
     background-image: url('./assets/img/element-main.png');
-    background-color: rgb(239, 228, 216);
+    background-color: rgb(223, 199, 172);
     background-size: contain;
     background-position: center;
 }
