--- a/src/components/Cover/cover.module.css
+++ b/src/components/Cover/cover.module.css
@@ -20,7 +20,7 @@
     border-style: dashed;
 }
 .textColorPrimary { color: rgb(227, 176, 75)}
-.bgColorPrimary { background-color: #F1D6AB}
+.bgColorPrimary { background-color: #cdb185 !important}
 .bgButton {
     background-color: rgb(227, 176, 75);
     padding-top: 0.375rem;
