style: style page1 fixed

--- a/src/pages/Page1/index.module.css
+++ b/src/pages/Page1/index.module.css
@@ -1,7 +1,7 @@
 
 .w-85 { width: 85%; }
 .card-details {
-    background: rgba(164, 158, 153, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
     border-radius: 10px;
